test/visibility/import/enablesUnqualified/multipleUnqualified/no-literal.good
no-literal.chpl:6: error: incorrect expression in 'import' for unqualified access, identifier expected
